--- a/html/시스템관리자_배너관리_상세보기.html
+++ b/html/시스템관리자_배너관리_상세보기.html
@@ -206,7 +206,7 @@
 
       <div class="content_wrap">
         <div class="inner">
-          <div class="table_cont form-table">
+          <div class="table_cont form-table pc">
             <table class="table-body-only table-fixed">
               <colgroup>
                 <col style="width:160px;">
@@ -240,7 +240,7 @@
                     <div class="form-element__wrap">
                       <div class="input-multi">
                         <span class="form-element__inner input-type">
-                          <input type="text" class="input-type1-font14" maxlength="" placeholder="랜딩URL" title="제목">
+                          <input type="text" value="http://korea.go.kr" class="input-type1-font14" maxlength="" placeholder="랜딩URL" title="제목">
                         </span>
                       </div>
                     </div>
@@ -249,23 +249,36 @@
                 <tr>
                   <th scope="row">배너 이미지 파일</th>
                   <td colspan="3">
-                    <ul class="file-list">
+                    <div class="info-text color-important">배너 이미지 사이즈(크기) : 000x000</div>
+                    <ul class="file-list file-list-multi" style="max-width: 100%;">
                       <li>
-                        <input type="file" name="" class="file" style="width: 600px;" />
-                        <div class="form-element__wrap">
-                          <div class="input-multi file-up">
-                            <span class="form-element__inner input-type">
-                              <input type="text" placeholder="" title="파일첨부">
-                            </span>
-                            <button type="button" class="btn-border-gray">
-                              <i class="icon-file"></i>
-                              파일찾기
-                            </button>
-                            <button type="button" class="btn-dark-light btn-add">
-                              <i class="ico-plus"></i>
-                              추가
-                            </button>
+                        <div class="input-wrap">
+                          <input type="file" name="" class="file" />
+                          <div class="form-element__wrap">
+                            <div class="input-multi file-up">
+                              <span class="form-element__inner input-type" style="width: 272px; flex: none;">
+                                <input type="text" value="file.png" title="파일첨부">
+                              </span>
+                              <button type="button" class="btn-border-gray">
+                                <i class="icon-file"></i>
+                                파일찾기
+                              </button>
+                              <button type="button" class="btn-dark-light btn-delete">
+                                <i class="ico-minus"></i>
+                                삭제
+                              </button>
+                              <button type="button" class="btn-dark-light btn-add">
+                                <i class="ico-plus"></i>
+                                추가
+                              </button>
+                            </div>
                           </div>
+                        </div>
+                        <div class="form-element__wrap flex-row">
+                          <div class="input-label">대체 텍스트</div>
+                          <span class="form-element__inner input-type">
+                            <input type="text" value="대체텍스트 노출" class="input-type1-font14" maxlength="" placeholder="랜딩URL" title="제목">
+                          </span>
                         </div>
                       </li>
                     </ul>
@@ -274,11 +287,40 @@
                 <tr>
                   <th scope="row">배너 내용</th>
                   <td colspan="3">
+                    <div class="form-element__wrap">                                
+                      <span class="form-element__inner text-area">
+                        <textarea placeholder="배너 내용" title="배너 내용">배너 내용</textarea>
+                      </span>
+                    </div>
+                    <div class="info-text mt-8">배너 이미지 내용을 입력해 주세요.</div>
                   </td>
                 </tr>
                 <tr>
                   <th scope="row">노출 기간</th>
                   <td colspan="3">
+                    <div class="radio-box">
+                      <label id="r0">
+                        <input type="radio" name="type8" value="type0a20" checked id="r0">
+                        <span>지정</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>1주</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>1개월</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>2개월</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>3개월</span>
+                      </label>
+                    </div>
+                    <div class="divide-line"></div>
                     <div class="data-pick-wrap">
                       <div class="form-element__wrap" style="width: 168px">
                         <div class="input-multi">
@@ -395,11 +437,11 @@
                     <div class="radio-box">
                       <label id="r03">
                         <input type="radio" name="type2" value="type020" checked id="r03">
-                        <span>노출</span>
+                        <span>정상</span>
                       </label>
                       <label id="r04">
                         <input type="radio" name="type2" value="type021" id="r04">
-                        <span>미노출</span>
+                        <span>정지</span>
                       </label>
                     </div>
                   </td>
@@ -407,7 +449,197 @@
               </tbody>
             </table>
           </div>
-          <div class="button__wrap flex-end mt-64">
+
+          <div class="table_cont mo">
+            <table class="table-body-only no-line-type flex-wrap">
+              <colgroup>
+                <col width="30%" />
+                <col width="" />
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th scope="row">노출위치</th>
+                  <td>메인</td>
+                </tr>
+                <tr>
+                  <th scope="row">제목</th>
+                  <td>
+                    <div class="form-element__wrap">                                
+                      <span class="form-element__inner input-type">
+                        <input type="text" class="input-type1-font14" placeholder="제목을 입력해주세요." title="제목">
+                      </span>
+                      <span class="input-text-count">
+                        <span class="current">0</span> / <span>50자</span>
+                      </span>
+                    </div>                          
+                  </td>    
+                </tr>
+                <tr>
+                  <th scope="row">랜딩URL</th>
+                  <td>
+                    <div class="form-element__wrap">                                
+                      <span class="form-element__inner input-type">
+                        <input type="text" class="input-type1-font14" placeholder="URL을 입력해주세요." title="랜딩URL">
+                      </span>
+                    </div>                          
+                  </td>    
+                </tr>
+                <tr>
+                  <td scope="row" colspan="2" class="full-width">
+                    배너 이미지 파일
+                    <div class="info-text color-important mt-16">배너 이미지 사이즈(크기) : 000x000</div>
+                    <ul class="mo-file-list mt-16">
+                      <li>
+                        <div class="input-wrap">
+                          <input type="file" name="" class="file" />
+                          <div class="file-up">
+                            <span class="form-element__inner input-type">
+                              <input type="text" placeholder="파일을 첨부해주세요." title="파일첨부">
+                            </span>
+                            <button type="button" class="btn-delete">
+                              <i class="ico-minus"></i>
+                            </button>
+                            <button type="button" class="btn-add">
+                              <i class="ico-plus"></i>
+                            </button>
+                          </div>
+                        </div>
+                        <div class="input-wrap mt-16">
+                          <div class="input-label">대체 텍스트</div>
+                          <span class="form-element__inner input-type">
+                            <input type="text"class="input-type1-font14" maxlength="" placeholder="내용을 입력해 주세요." title="대체텍스트">
+                          </span>
+                        </div>
+                      </li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr> 
+                  <td scope="row" colspan="2" class="full-width">
+                    배너 내용
+                    <div class="form-element__wrap mt-16">                                
+                      <span class="form-element__inner text-area">
+                        <textarea class="input-type1-font14" placeholder="내용을 입력해주세요" title="게시판 소개"></textarea>
+                      </span>
+                    </div> 
+                    <div class="info-text mt-8">배너 이미지 내용을 입력해 주세요.</div>
+                  </td> 
+                </tr>   
+                <tr>
+                  <td scope="row" colspan="2" class="full-width">
+                    노출기간
+                    <div class="radio-box mt-16">
+                      <label id="r0">
+                        <input type="radio" name="type8" value="type0a20" checked id="r0">
+                        <span>지정</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>1주</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>1개월</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>2개월</span>
+                      </label>
+                      <label id="rb">
+                        <input type="radio" name="type8" value="type0a21" id="rb">
+                        <span>3개월</span>
+                      </label>
+                    </div>
+                    <div class="divide-line"></div>
+                    <div class="data-pick-wrap flex-wrap">
+                      <div class="form-element__wrap">
+                        <div class="input-multi">
+                          <span class="form-element__inner input-type">
+                            <input type="text" value="" class="input-type1-font14" maxlength="50" placeholder="" id="datepicker_start_m" title="">
+                          </span>
+                        </div>
+                      </div>
+                      <div class="flex-row">
+                        <!-- 콤보박스 -->
+                        <div class="select_box" style="width: 120px">
+                          <span class="select">10시</span>
+                          <div class="option">
+                            <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                              <ul>
+                                <li>선택함1</li>
+                                <li>선택함2</li>
+                                <li>선택함3</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- //콤보박스 -->
+                        시
+                        <!-- 콤보박스 -->
+                        <div class="select_box" style="width: 120px">
+                          <span class="select">10분</span>
+                          <div class="option">
+                            <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                              <ul>
+                                <li>선택함1</li>
+                                <li>선택함2</li>
+                                <li>선택함3</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- //콤보박스 -->
+                        분
+                        <div class="dash">~</div>
+                      </div>
+                      <div class="form-element__wrap">
+                        <div class="input-multi">
+                          <span class="form-element__inner input-type">
+                            <input type="text" value="" class="input-type1-font14" maxlength="50" placeholder=""
+                              id="datepicker_end_m" title="">
+                          </span>
+                        </div>
+                      </div>
+                      <div class="flex-row">
+                        <!-- 콤보박스 -->
+                        <div class="select_box" style="width: 120px">
+                          <span class="select">10시</span>
+                          <div class="option">
+                            <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                              <ul>
+                                <li>선택함1</li>
+                                <li>선택함2</li>
+                                <li>선택함3</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- //콤보박스 -->
+                        시
+                        <!-- 콤보박스 -->
+                        <div class="select_box" style="width: 120px">
+                          <span class="select">10분</span>
+                          <div class="option">
+                            <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                              <ul>
+                                <li>선택함1</li>
+                                <li>선택함2</li>
+                                <li>선택함3</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- //콤보박스 -->
+                        분
+                      </div>
+                    </div>
+                  </td>
+                </tr>                                                                                                                                                     
+              </tbody>
+            </table>
+          </div>
+
+          <div class="button__wrap flex-end mt-64 pc">
             <a href="#" class="btn-gray-default">
               <i class="ico-delete"></i> 삭제
             </a>
@@ -540,6 +772,14 @@
           </div>
           <p class="copy">ⓒ Ministry of the Interior and Safety. All rights reserved.</p>
         </div>
+      </div>
+    </div>
+
+    <div class="footer mo foot_btn_wrap">
+      <div class="foot_btn_area">
+        <a href="#none" class="btn btn_delete"><span>삭제</span></a>
+        <a href="#none" class="btn btn btn_save"><span>저장</span></a>
+        <a href="#none" class="btn btn_list"><span>목록</span></a>
       </div>
     </div>
   </div>
